--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 .idea
 target
+salida-01-07-10.06
+salida-29-06-16.55
+salida-29-06-17.15
+salida-30-06-16.38
+salida-30-06-16.58
+salida-01-07-10.38
+.bsp
