--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ salida-30-06-16.38
 salida-30-06-16.58
 salida-01-07-10.38
 .bsp
+CO-emisiones.csv
+CO-index.csv
+death-index.csv
+death-pollution.csv
