--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ CO-emisiones.csv
 CO-index.csv
 death-index.csv
 death-pollution.csv
+._SUCCESS.crc
+_SUCCESS
+.part-00000-3116330f-5562-4019-95c1-8b4f2d9abc79-c000.csv.crc
+part-00000-3116330f-5562-4019-95c1-8b4f2d9abc79-c000.csv
